--- a/index.html
+++ b/index.html
@@ -15,19 +15,19 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item">
-                    <a class="nav-link" href="buy.html">Buy</a>
+                    <a class="nav-link" href="index.html">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="sell.html">Sell</a>
+                    <a class="nav-link" href="./redirect/buy.html">Buy</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="research.html">Research</a>
+                    <a class="nav-link" href="./redirect/sell.html">Sell</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="new_car_showroom.html">New Car Showroom</a>
+                    <a class="nav-link" href="./redirect/new_cars.html">New Cars</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="value_my_car.html">Value My Car</a>
+                    <a class="nav-link" href="./redirect/value_my_car.html">Value My Car</a>
                 </li>
             </ul>
             <ul class="navbar-nav">
