--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Car Selling Project</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
@@ -41,9 +42,51 @@
         </div>
     </nav>
 
+    <div class="div1">
+        <!-- Centered content inside the image can be added here -->
+    </div>
+    <div class="div2">
+        <!-- Content for div 2 -->
+        <h1>Search by lifestyle</h1>
+        <div class="row">
+            <div class="col-md-1 text-center">
+                <img src="images/family.jpg" alt="Family" class="img-fluid">
+                <p>Family</p>
+            </div>
+            <div class="col-md-1 text-center">
+                <img src="images/first_car.jpg" alt="First Car" class="img-fluid">
+                <p>First car</p>
+            </div>
+            <div class="col-md-1 text-center">
+                <img src="images/green.jpg" alt="Green" class="img-fluid">
+                <p>Green</p>
+            </div>
+            <div class="col-md-1 text-center">
+                <img src="images/offroad_4x4.jpg" alt="Offroad 4x4" class="img-fluid">
+                <p>Offroad 4x4</p>
+            </div>
+            <div class="col-md-1 text-center">
+                <img src="images/performance.jpg" alt="Performance" class="img-fluid">
+                <p>Performance</p>
+            </div>
+            <div class="col-md-1 text-center">
+                <img src="images/prestige.jpg" alt="Prestige" class="img-fluid">
+                <p>Prestige</p>
+            </div>
+            <div class="col-md-1 text-center">
+                <img src="images/tradie.jpg" alt="Tradie" class="img-fluid">
+                <p>Tradie</p>
+            </div>
+            <div class="col-md-1 text-center">
+                <img src="images/unique.jpg" alt="Unique" class="img-fluid">
+                <p>Unique</p>
+            </div>
+        </div>
+    </div>
+
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-    <script src="scripts.js"></script>
+    <script src="javascript/scripts.js"></script>
 </body>
 </html>
