--- a/index.html
+++ b/index.html
@@ -46,7 +46,40 @@
         <!-- Centered content inside the image can be added here -->
     </div>
     <div class="div2">
-        <!-- Content for div 2 -->
+        <!-- Search Section -->
+        <div class="search-section">
+            <form>
+                <div class="form-row">
+                    <div class="form-group col-md-3">
+                        <label for="make">Make</label>
+                        <select id="make" class="form-control">
+                            <option selected>All makes</option>
+                            <!-- Add options here -->
+                        </select>
+                    </div>
+                    <div class="form-group col-md-3">
+                        <label for="model">Model</label>
+                        <select id="model" class="form-control">
+                            <option selected>All models</option>
+                            <!-- Add options here -->
+                        </select>
+                    </div>
+                    <div class="form-group col-md-3">
+                        <label for="bodyType">Body type</label>
+                        <select id="bodyType" class="form-control">
+                            <option selected>All body types</option>
+                            <!-- Add options here -->
+                        </select>
+                    </div>
+                    <div class="form-group col-md-3">
+                        <label for="keyword">Keyword</label>
+                        <input type="text" class="form-control" id="keyword" placeholder="Search by keyword">
+                    </div>
+                </div>
+                <button type="submit" class="btn btn-primary btn-block">Show Cars</button>
+            </form>
+        </div>
+
         <h1>Search by lifestyle</h1>
         <div class="row">
             <div class="col-md-1 text-center">
