--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                 <p>Prestige</p>
             </div>
             <div class="col-md-1 text-center">
-                <img src="images/tradie.jpg" alt="Tradie" class="img-fluid">
+                <img src="images/tradie.png" alt="Tradie" class="img-fluid">
                 <p>Tradie</p>
             </div>
             <div class="col-md-1 text-center">
