--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <nav class="navbar navbar-expand-lg">
         <a class="navbar-brand" href="#">Logo</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -49,22 +49,22 @@
         <!-- Search Section -->
         <div class="search-section">
             <form>
-                <div class="form-row">
-                    <div class="form-group col-md-3">
+                <div class="form-row align-items-end">
+                    <div class="form-group col-md-2">
                         <label for="make">Make</label>
                         <select id="make" class="form-control">
                             <option selected>All makes</option>
                             <!-- Add options here -->
                         </select>
                     </div>
-                    <div class="form-group col-md-3">
+                    <div class="form-group col-md-2">
                         <label for="model">Model</label>
                         <select id="model" class="form-control">
                             <option selected>All models</option>
                             <!-- Add options here -->
                         </select>
                     </div>
-                    <div class="form-group col-md-3">
+                    <div class="form-group col-md-2">
                         <label for="bodyType">Body type</label>
                         <select id="bodyType" class="form-control">
                             <option selected>All body types</option>
@@ -75,8 +75,10 @@
                         <label for="keyword">Keyword</label>
                         <input type="text" class="form-control" id="keyword" placeholder="Search by keyword">
                     </div>
+                    <div class="form-group col-md-3 text-right">
+                        <button type="submit" class="btn btn-primary">Show Cars</button>
+                    </div>
                 </div>
-                <button type="submit" class="btn btn-primary btn-block">Show Cars</button>
             </form>
         </div>
 
@@ -107,7 +109,7 @@
                 <p>Prestige</p>
             </div>
             <div class="col-md-1 text-center">
-                <img src="images/tradie.png" alt="Tradie" class="img-fluid">
+                <img src="./images/tradie.png" alt="Tradie" class="img-fluid">
                 <p>Tradie</p>
             </div>
             <div class="col-md-1 text-center">
