--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                         <label for="keyword">Keyword</label>
                         <input type="text" class="form-control" id="keyword" placeholder="Search by keyword">
                     </div>
-                    <div class="form-group col-md-3 text-right">
+                    <div class="form-group col-md-3">
                         <button type="submit" class="btn btn-primary">Show Cars</button>
                     </div>
                 </div>
@@ -109,7 +109,7 @@
                 <p>Prestige</p>
             </div>
             <div class="col-md-1 text-center">
-                <img src="./images/tradie.png" alt="Tradie" class="img-fluid">
+                <img src="images/tradie.jpg" alt="Tradie" class="img-fluid">
                 <p>Tradie</p>
             </div>
             <div class="col-md-1 text-center">
