--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                         <label for="keyword">Keyword</label>
                         <input type="text" class="form-control" id="keyword" placeholder="Search by keyword">
                     </div>
-                    <div class="form-group col-md-3 text-right">
+                    <div class="form-group col-md-3">
                         <button type="submit" class="btn btn-primary">Show Cars</button>
                     </div>
                 </div>
@@ -86,39 +86,58 @@
             </div>
         </div>
 
-        <h1>Search by lifestyle</h1>
-        <div class="row">
-            <div class="col-md-1 text-center">
-                <img src="images/family.jpg" alt="Family" class="img-fluid">
-                <p>Family</p>
-            </div>
-            <div class="col-md-1 text-center">
-                <img src="images/first_car.jpg" alt="First Car" class="img-fluid">
-                <p>First car</p>
-            </div>
-            <div class="col-md-1 text-center">
-                <img src="images/green.jpg" alt="Green" class="img-fluid">
-                <p>Green</p>
-            </div>
-            <div class="col-md-1 text-center">
-                <img src="images/offroad_4x4.jpg" alt="Offroad 4x4" class="img-fluid">
-                <p>Offroad 4x4</p>
-            </div>
-            <div class="col-md-1 text-center">
-                <img src="images/performance.jpg" alt="Performance" class="img-fluid">
-                <p>Performance</p>
-            </div>
-            <div class="col-md-1 text-center">
-                <img src="images/prestige.jpg" alt="Prestige" class="img-fluid">
-                <p>Prestige</p>
-            </div>
-            <div class="col-md-1 text-center">
-                <img src="images/tradie.jpg" alt="Tradie" class="img-fluid">
-                <p>Tradie</p>
-            </div>
-            <div class="col-md-1 text-center">
-                <img src="images/unique.jpg" alt="Unique" class="img-fluid">
-                <p>Unique</p>
+        <!-- Search by Lifestyle Section -->
+        <div class="search-lifestyle-section">
+            <h1>Search by lifestyle</h1>
+            <div class="lifestyle-menu">
+                <div class="lifestyle-item">
+                    <a href="#">
+                        <img src="https://resource.csnstatic.com/mobile/carsales/api/home-categories/Family.png" alt="Family">
+                        <span>Family</span>
+                    </a>
+                </div>
+                <div class="lifestyle-item">
+                    <a href="#">
+                        <img src="https://resource.csnstatic.com/mobile/carsales/api/home-categories/First.png" alt="First Car">
+                        <span>First car</span>
+                    </a>
+                </div>
+                <div class="lifestyle-item">
+                    <a href="#">
+                        <img src="https://resource.csnstatic.com/mobile/carsales/api/home-categories/Electric.png" alt="Green">
+                        <span>Green</span>
+                    </a>
+                </div>
+                <div class="lifestyle-item">
+                    <a href="#">
+                        <img src="https://resource.csnstatic.com/mobile/carsales/api/home-categories/offroad.png" alt="Offroad 4x4">
+                        <span>Offroad 4x4</span>
+                    </a>
+                </div>
+                <div class="lifestyle-item">
+                    <a href="#">
+                        <img src="https://resource.csnstatic.com/mobile/carsales/api/home-categories/Performance.png" alt="Performance">
+                        <span>Performance</span>
+                    </a>
+                </div>
+                <div class="lifestyle-item">
+                    <a href="#">
+                        <img src="https://resource.csnstatic.com/mobile/carsales/api/home-categories/Prestige.png" alt="Prestige">
+                        <span>Prestige</span>
+                    </a>
+                </div>
+                <div class="lifestyle-item">
+                    <a href="#">
+                        <img src="https://resource.csnstatic.com/mobile/carsales/api/home-categories/Tradie.png" alt="Tradie">
+                        <span>Tradie</span>
+                    </a>
+                </div>
+                <div class="lifestyle-item">
+                    <a href="#">
+                        <img src="https://resource.csnstatic.com/mobile/carsales/api/home-categories/Unique.png" alt="Unique">
+                        <span>Unique</span>
+                    </a>
+                </div>
             </div>
         </div>
     </div>
