--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                         <input type="text" class="form-control" id="keyword" placeholder="Search by keyword">
                     </div>
                     <div class="form-group col-md-3">
-                        <button type="submit" class="btn btn-primary">Show Cars</button>
+                        <button type="submit" class="btn btn-primary btn-block mt-4">Show Cars</button>
                     </div>
                 </div>
             </form>
